# LeveGL

./: .clang-format  CMakeLists.txt  CMakeOptions.cmake  LICENSE  README.md  package-lock.cmake
.github/workflows/: build.yml
cmake/: OpenGLConfigurations.cmake  PlatformConfiguration.cmake  tools.cmake
examples/: CMakeLists.txt  brazil.c  circle.c  shapes.c  triangle.c
examples/core/: window.c
include/levegl/: leapi.h  legl.h  leutils.h  levegl.h
src/: CMakeLists.txt  lecore.c  lecore_context.h  leinput.c  leshader.c  leshapes.c  leutils.c
test/: CMakeLists.txt  main.c
